# SphereDefender

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  run_client.sh
assets/Photoshop/: Background2.psd  Convoy.psd  Demon.psd  Gunfire.psd  Leyline.psd  MainMenu.psd  Menu.psd  Menu2.psd  MenuButtons.psd  Other_Waste_rocks.psd  OvermapButtons.psd  Player.psd  SmallDemon.psd  SmallDemon2.psd  UiFrame.psd
data/configs/: debug_overrides.json
data/definitions/: enemy_pack.json  menu_events.json
data/definitions/entities/: bat.json  small_demon.json
data/definitions/regions/: cave.json  leyline.json  menu_event.json  placeholder.json  secret.json  starting_town.json  stump.json
data/sprites/backgrounds/: cracked_mud.json  grass.json  sand.json
data/sprites/doodads/: background.json  leyline.json
data/sprites/entities/: bat.json  console.json  convoy_vertical.json  old_man.json  player.json  small_demon.json  small_demon_old.json
data/sprites/gui/: exit.json  frame.json  healthbar.json  interaction_marker.json  inventory_item.json  leyline_overmap_node.json  menu.json  menu_button.json  neutral_overmap_node.json  overmap_cancel.json  overmap_confirm.json  resume.json  save.json  settings.json  town_overmap_node.json  vote_indicator.json
data/sprites/main_menu/: back.json  class_select_left.json  class_select_right.json  connect.json  create_lobby.json  exit.json  frog.json  join_lobby.json  leave_lobby.json  server_start.json  settings.json  splash_start.json  splash_wizard.json  start.json
data/sprites/player/: gunfire.json
docs/Network/: Protocol.md
include/: global_resources.h  network.h
include/Client/: cursor_button.h  game.h  game_manager.h  lobby.h  main_menu.h  messaging.h  player.h  player_states.h  spritesheet.h  state_manager.h  textbox.h
include/Server/: player_data.h  server.h
lib/: CMakeLists.txt
lib/client/: CMakeLists.txt
lib/client/include/: avatar.h  convoy.h  cursor_button.h  enemy.h  event_handler.h  game.h  game_manager.h  gui.h  lobby.h  main_menu.h  overmap.h  player.h  player_state.h  region_map.h  resources.h  settings.h  spritesheet.h  stash.h  textbox.h  toggle_button.h  util.h  world_map.h  wrappable_text.h
lib/client/src/: avatar.cpp  convoy.cpp  cursor_button.cpp  enemy.cpp  event_handler.cpp  game.cpp  game_manager.cpp  gui.cpp  lobby.cpp  main.cpp  main_menu.cpp  overmap.cpp  player.cpp  region_map.cpp  resources.cpp  settings.cpp  spritesheet.cpp  stash.cpp  textbox.cpp  toggle_button.cpp  util.cpp  world_map.cpp  wrappable_text.cpp
lib/definitions/: CMakeLists.txt
lib/definitions/include/: animation_tracker.h  debug_overrides.h  definitions.h  entity_definitions.h  region_definitions.h
lib/definitions/src/: animation_tracker.cpp  debug_overrides.cpp  definitions.cpp  entity_definitions.cpp  region_definitions.cpp
lib/network/: CMakeLists.txt
lib/network/include/: entity_data.h  messaging.h  server_settings.h
lib/network/src/: messaging.cpp
lib/server/: CMakeLists.txt
lib/server/include/: enemy.h  global_state.h  new_enemy.h  player.h  player_info.h  player_list.h  region.h  server.h  util.h
lib/server/src/: enemy.cpp  global_state.cpp  main.cpp  new_enemy.cpp  player.cpp  player_info.cpp  player_list.cpp  region.cpp  server.cpp  util.cpp
lib/shared/: CMakeLists.txt
lib/shared/include/: entity_definitions.h  region_definitions.h
lib/shared/src/: entity_definitions.cpp  region_definitions.cpp
lib/util/: CMakeLists.txt
lib/util/include/: game_math.h  pathfinding.h  types.h
lib/util/src/: game_math.cpp  pathfinding.cpp
src/: global_resources.cpp  network.cpp
src/Client/: CMakeLists.txt  cursor_button.cpp  game.cpp  game_manager.cpp  lobby.cpp  main.cpp  main_menu.cpp  messaging.cpp  player.cpp  player_states.cpp  spritesheet.cpp  state_manager.cpp  textbox.cpp
src/Server/: CMakeLists.txt  main.cpp  server.cpp
